Release Notes

* 4/6/2016
  * fixed fairshare for WORLD
  * introduced connection pool for EI lookup

* 4/5/2016
  * fixed updateUnmergeDS for running
  * changed submitJobs to require FQANs for atlas
  * fixed ppE to use sites with corecount=null when looking for score
  * fixed killUnusedESC to kill running consumers when killAll
  * added prod role check in submitJob

* 4/4/2016
  * fixed nucleus.getAssoicatedEndpoint for dst:

* 4/1/2016
  * changed updateRelatedEventServiceJobs to update stateChangeTime

* 3/31/2016
  * added Oracle EI stuff

* 3/24/2016
  * fixed getEventRanges to kill unused consumers if no more events

* 3/23/2016
  * fixed cloned jobs to set pandaIDs in Dataset_Contents
  * added changeTaskModTimePanda and triggerTaskBrokerage
  * fixed AdderAtlas for RSEProtocolNotSupported
  * added checkClonedJob
  * changed localEsMerge to send merge jobs to score

* 3/21/2016
  * changed checkTaskStatus to allow updates in exhausted
  * fixed retryJob not to add metadata
  * fixed ES merge retry to take attemptNr into account
  * fixed killESC for multiple inputs
  
* 3/18/2016
  * resetting ramCount to 0 for ES merge

* 3/16/2016
  * added putLogToOS
  * added newParams in retryTask
  * changed dispatcher to ignore fairshare for ES merge

* 3/14/2016
  * introduced jobSubStatus=pilot_closed

* 3/10/2016
  * added isSuperUser

* 3/9/2016
  * added changeTaskSplitRule
  * added changeTaskAttribute
  * fixed ppEvt for nucleus without localEsMerge
	
* 3/8/2016
  * fixed to properly decrease priorities for group analysis

* 3/7/2016
  * using is_local in DdmSpec

* 3/2/2016
  * changed retryTask for running tasks to reactivate failed inputs

* 2/29/2016
  * fixed updateForPilotRetryJEDI to update outPandaID

* 2/25/2016
  * changed SiteSpec.isDirectIO to take direct_access_lan into account

* 2/23/2016
  * added getAssoicatedEndpoint to DdmSpec

* 2/22/2016
  * added allowWanInputAccess

* 2/19/2016